--- a/atk.html
+++ b/atk.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D&D Attack Roll Calculator</title>
-    <link rel="stylesheet" href="/css/atk.css">
+    <link rel="stylesheet" href="css/atk.css">
 </head>
 <body>
     <div class="hamburger-menu">
