--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <p>Tips on using Conjure Animals...</p>
     </section>
 
-    <script src="/scripts/home.js"></script>
+    <script src="scripts/home.js"></script>
 </body>
 </html>
 
